RA-13 Display splash screen during data loading

--- a/app/src/main/res/values-v31/themes.xml
+++ b/app/src/main/res/values-v31/themes.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.Reports" parent="android:Theme.Material.Light.NoActionBar" />
-
     <style name="Theme.Reports.Splash" parent="Theme.SplashScreen">
+        <item name="android:windowSplashScreenBackground">@color/background</item>
         <item name="postSplashScreenTheme">@style/Theme.Reports</item>
     </style>
 </resources>
